snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/error-1.12.0-20220503.124322-1-sources.jar.sha512
4f906b2f3cb0319d4fb388121341e6c1d3e924cffa5598101f2564f3e1116a5561f41b016d35a807934fa2a48613c1aceb44e5534dee3ffed89a4da6d0b56fd0